# wxcoin

./: .gitignore  ADVANCED_SETTINGS_IMPLEMENTATION.md  BUILD.md  BUILD_README.md  CANVAS_INITIALIZATION_ANALYSIS.md  CANVAS_PERFORMANCE_DEEP_ANALYSIS.md  CANVAS_PERFORMANCE_FIXES_APPLIED.md  CANVAS_PERFORMANCE_ISSUE.md  CLEAN_DOCKING_IMPLEMENTATION.md  CMakeLists.txt  CMakeLists_original.txt  CMakeLists_simple.txt  CMakePresets.json  CMakeSettings.json  COMPILATION_FIXES.md  COMPILATION_FIXES_SUMMARY.md  DOCKING_ARCHITECTURE_CLARIFICATION.md  DOCKING_CLEANUP_SUMMARY.md  DOCKING_FEATURE_COMPARISON.md  DOCKING_FINAL_FIX_SUMMARY.md  DOCKING_IMPLEMENTATION_SUMMARY.md  DOCKING_LAYOUT_FIX_SUMMARY.md  DOCKING_LOGIC_ADJUSTMENT.md  DOCKING_LOGIC_UPDATE_SUMMARY.md  DOCKING_PARENT_WINDOW_FIX.md  DOCKING_PERFORMANCE_ANALYSIS.md  DOCKING_PERFORMANCE_FIX.md  DOCKING_SIMPLIFIED_FIX.md  DOCKOVERLAY_FINAL_FIX.md  DOCKOVERLAY_TRANSPARENCY_FINAL_STATUS.md  DOCKOVERLAY_TRANSPARENCY_FIX.md  DRAG_MERGE_POSITION_SYNC_SUMMARY.md  FBO_DEBUG_GUIDE.md  FBO_STATUS.md  FINAL_COMPILATION_FIXES.md  FINAL_SUMMARY.md  FLATFRAMEDOCK_COMPILE_FIX.md  FLATFRAMEDOCK_LAYOUT_REDESIGN.md  FLATFRAMEDOCK_REFACTORING_SUMMARY.md  FLATUI_STATUSBAR_DISPLAY_FIX.md  (+83 more)
modules/commands/: CMakeLists.txt
modules/core/: CMakeLists.txt
modules/geometry/: CMakeLists.txt
modules/input/: CMakeLists.txt
modules/navigation/: CMakeLists.txt
modules/rendering/: CMakeLists.txt
modules/ui/: CMakeLists.txt
src/: Application.cpp  CMakeLists.txt  Canvas.cpp  Command.cpp  CoordinateSystemRenderer.cpp  CreateCommand.cpp  CuteNavCube.cpp  DPIManager.cpp  DefaultInputState.cpp  EventCoordinator.cpp  FlatFrame.cpp  GeometryFactory.cpp  GeometryObject.cpp  GlobalServices.cpp  InputManager.cpp  MainApplication.cpp  MainApplicationDocking.cpp  MainFrame.cpp  MouseHandler.cpp  NavigationController.cpp  NavigationCube.cpp  NavigationCubeConfigDialog.cpp  NavigationCubeManager.cpp  NavigationStyle.cpp  NormalValidator.cpp  PickingAidManager.cpp  PickingInputState.cpp  PositionDialog.cpp  ProgressiveGeometryLoader.cpp  PropertyPanel.cpp  RenderingEngine.cpp  SceneManager.cpp  SelectionAccelerator.cpp  StreamingFileReader.cpp  ViewportManager.cpp  main.cpp
src/.cursor/: README.md  rules.json
src/async/: AsyncComputeEngine.cpp  AsyncEngineExample.cpp  AsyncEngineIntegration.cpp  CMakeLists.txt  GeometryComputeTasks.cpp
src/commands/: BaseSelectionListener.cpp  CMakeLists.txt  CancelIntersectionListener.cpp  ChessboardGridToggleListener.cpp  Command.cpp  CommandDispatcher.cpp  CommandErrorHelper.cpp  CommandListenerManager.cpp  CoordinateSystemVisibilityListener.cpp  CreateBoxListener.cpp  CreateCommand.cpp  CreateConeListener.cpp  CreateCylinderListener.cpp  CreateNavCubeListener.cpp  CreateSphereListener.cpp  CreateTorusListener.cpp  CreateTruncatedCylinderListener.cpp  CreateWrenchListener.cpp  DockLayoutConfigListener.cpp  EdgeSelectionListener.cpp  EdgeSettingsListener.cpp  ExplodeAssemblyListener.cpp  ExplodeConfigListener.cpp  FaceQueryCommandListener.cpp  FaceQueryListener.cpp  FaceSelectionCommandListener.cpp  FaceSelectionListener.cpp  FileCommandListener.cpp  FileExitListener.cpp  FileNewListener.cpp  FileOpenListener.cpp  FileSaveAsListener.cpp  FileSaveListener.cpp  FixNormalsListener.cpp  GeometryCommandListener.cpp  GeometryFactory.cpp  GlobalLightingListener.cpp  HelpAboutListener.cpp  ImportGeometryListener.cpp  ImportStepListener.cpp  (+45 more)
src/config/: CMakeLists.txt  Coin3DConfig.cpp  ConfigManager.cpp  ConfigManagerDialog.cpp  ConfigManagerDialog_new.cpp  ConstantsConfig.cpp  EdgeSettingsConfig.cpp  FontManager.cpp  LightingConfig.cpp  LocalizationConfig.cpp  LoggerConfig.cpp  RenderingConfig.cpp  SelectionColorConfig.cpp  SelectionHighlightConfig.cpp  SvgIconManager.cpp  ThemeManager.cpp  UnifiedConfigManager.cpp
src/core/: CMakeLists.txt  DPIAwareRendering.cpp  DPIManager.cpp  DefaultSubsystemFactory.cpp  GeometryObject.cpp  PerformanceBus.cpp  ServiceLocator.cpp
src/creators/: CMakeLists.txt  GeometryCreator.cpp  GeometryCreatorFactory.cpp  StandardCreators.cpp
src/docking/: AutoHideContainer.cpp  BatchRefreshManager.cpp  ButtonLayoutCalculator.cpp  CMakeLists.txt  DockArea.cpp  DockAreaMergedTitleBar.cpp  DockAreaTabBar.cpp  DockAreaTitleBar.cpp  DockContainerLayout.cpp  DockContainerOptimized.cpp  DockContainerUtils.cpp  DockContainerWidget.cpp  DockContainerWidget_Fixed.cpp  DockLayoutCache.cpp  DockLayoutConfig.cpp  DockLayoutConfigDialog.cpp  DockLayoutPreview.cpp  DockManager.cpp  DockOverlay.cpp  DockResizeMonitor.cpp  DockSplitter.cpp  DockStateManager.cpp  DockStyle.cpp  DockWidget.cpp  DockingExample.cpp  DockingIntegration.cpp  DragSystemManager.cpp  FloatingDockContainer.cpp  FloatingDockFrame.cpp  IDragHandler.cpp  LayoutOptimizer.cpp  OverlayRenderer.cpp  OverlayStateManager.cpp  PerformanceMonitor.cpp  PerspectiveManager.cpp  RenderObjectPool.cpp  RenderOptimizer.cpp  SmartLayoutStrategy.cpp  SplitterLayoutAlgorithm.cpp  TabBarRenderer.cpp  (+3 more)
src/flatui/: BorderlessFrameLogic.cpp  CMakeLists.txt  CustomDropDown.cpp  FlatBarSpaceContainer.cpp  FlatUIBar.cpp  FlatUIBarDrawing.cpp  FlatUIBarEventDispatcher.cpp  FlatUIBarLayoutManager.cpp  FlatUIBarPerformanceManager.cpp  FlatUIBarSpaces.cpp  FlatUIBarStateManager.cpp  FlatUIBarTabs.cpp  FlatUIButtonBar.cpp  FlatUIButtonBarControls.cpp  FlatUIButtonBarCore.cpp  FlatUIButtonBarDrawing.cpp  FlatUIButtonBarEvents.cpp  FlatUIButtonBarStyles.cpp  FlatUICustomControl.cpp  FlatUIEventManager.cpp  FlatUIFixPanel.cpp  FlatUIFloatPanel.cpp  FlatUIFrame.cpp  FlatUIFunctionSpace.cpp  FlatUIGallery.cpp  FlatUIHomeMenu.cpp  FlatUIHomeSpace.cpp  FlatUIPage.cpp  (+12 more)
test/: CMakeLists.txt  README.md  README_STANDALONE.md  build_simple_docking_frame.sh  build_simple_integration.sh  build_standalone.bat  build_standalone.sh  docking_test_app.cpp  docking_test_app.h  minimal_docking_example.cpp  mock_wx.h  simple_docking_integration.cpp  simple_test.cpp  standalone_docking_test.cpp  test_all_features.cpp  test_docking_integration.cpp
test_build/: CMakeCache.txt  CMakeLists.txt
(+1200 files in other folders)
